--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.5.0",
     "pg": "^8.5.1"
   },
   "devDependencies": {
